<resources>
    <string name="app_name">appChecker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_name">Nome</string>
    <string name="action_sign_in">Entre</string>
    <string name="action_sign_guest">Entre como convidado</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">E-mail inválido</string>
    <string name="invalid_password_login">Senha inválida</string>
    <string name="invalid_password_register">A senha deve conter no mínimo 5 caracteres, com letras maiúsculas e minúsculas.</string>
    <string name="login_failed">"Ocorreu um erro ao efetuar o login"</string>
    <string name="enter_or_create">Preencha os dados</string>
    <string name="or">ou</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="text_button_bottom_sheet"> Ok </string>
    <string name="text_title_bottom_sheet">Atenção!</string>
    <string name="text_title_loading_bottom_sheet">Carregando...</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente.</string>
    <string name="error_login">Ocorreu um erro, por favor verifique seus dados e tente novamente.</string>
    <string name="error_empty_form">Por favor, preencha todos os campos obrigatórios antes de prosseguir.</string>
    <string name="error_not_implemented_yet">Recurso ainda não implementado.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proximo">Próximo</string>
    <string name="voltar">Voltar</string>

    <!-- OnBoarding -->
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="deny_permissions">Permissões negadas podem resultar em funcionalidades indisponíveis.😔</string>

    <string name="onboarding_slide1_title">Crie uma conta</string>
    <string name="onboarding_slide1_subtitle"> Descubra o poder da pesquisa!</string>
    <string name="onboarding_slide1_desc">Com nosso aplicativo de pesquisa, você terá acesso a uma vasta gama de informações e poderá explorar os tópicos que mais lhe interessam.</string>

    <string name="onboarding_slide2_title">Faça login na sua conta</string>
    <string name="onboarding_slide2_subtitle"> Aprenda, descubra e expanda seus horizontes com apenas alguns toques.</string>
    <string name="onboarding_slide2_desc">Tem uma pergunta? Nosso aplicativo de pesquisa tem as respostas!</string>

    <string name="onboarding_slide3_title">Faça login na sua conta</string>
    <string name="onboarding_slide3_subtitle">A pesquisa nunca foi tão eficiente!</string>
    <string name="onboarding_slide3_desc">Aqui, contamos com um time globalmente especializado para te ajudar em todas as etapas!</string>

    <string name="continuar">Continuar</string>
    <string name="finalizar">Finalizar</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_recover">RecoverActivity</string>
    <string name="action_register">Cadastre-se</string>
    <string name="register_title">Falta pouco para terminar o seu cadastro!</string>
    <string name="register_description">Como deseja se conectar?!</string>
    <string name="continue_email">Continuar com o E-mail</string>
    <string name="continue_google">Continue com o Google</string>
    <string name="title_activity_register_form">RegisterFormActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="now">Agora...</string>
    <string name="finalize">E pra finalizar...</string>
    <string name="create_password">Crie uma senha</string>
    <string name="create_name">Qual o seu nome?</string>
    <string name="invalid_name">Seu nome não pode ser vazio!</string>
    <string name="dont_receive_code">Não recebeu o código?</string>
    <string name="enter_the_code">Insira o Código</string>
    <string name="code_email_description">Digite o código de 4 dígitos que enviamos para o e-mail:</string>
    <string name="image_view">register image view</string>
    <string name="message_loading_bottom_sheet">Por favor, aguarde...</string>
    <string name="imageviewdescription">imageviewDescription</string>
    <string name="concluded_questions">Seu questionário foi concluído!</string>
    <string name="result_title">É necessário declarar?</string>
    <string name="what_todo">O que fazer?</string>
    <string name="whoToFind">Com quem falar?</string>
    <string name="assertiveness">Assertividade</string>
</resources>