<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.auth.register.RegisterActivity">

    <ImageView
        android:id="@+id/ivRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/login"
        app:layout_constraintBottom_toTopOf="@+id/register_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_view" />

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/register_title"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_light"
        android:gravity="center"
        android:text="@string/register_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:padding="13dp"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/black"
        android:text="@string/continue_google"
        style="@style/ButtonTransparent"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:iconPadding="20dp"
        app:icon="@drawable/ic_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_desc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:padding="16dp"
        android:text="@string/continue_email"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:icon="@drawable/ic_gmail"
        app:iconGravity="textStart"
        app:iconPadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google" />

</androidx.constraintlayout.widget.ConstraintLayout>